--- a/Groep Ace Quiz Project/css/style.css
+++ b/Groep Ace Quiz Project/css/style.css
@@ -96,14 +96,20 @@ header {
   align-items: center;
   gap: 5px;
   padding: 8px 12px;
+  margin-bottom: 10px;
   width: 130px; /* vaste breedte */
-  background-color: #007bff;
-  color: white;
+  background-color: skyblue;
+  color: black;
   border: solid 4px black;
   border-radius: 6px;
   cursor: pointer;
   font-size: 14px;
   justify-content: center;
+}
+
+.button-home {
+    color: black;
+    text-decoration: none;
 }
 
 .music-control button:hover {
