--- a/Groep Ace Quiz Project/css/style.css
+++ b/Groep Ace Quiz Project/css/style.css
@@ -41,7 +41,7 @@ header {
 
 .card {
     display: block;
-    background: #f0f0f0;
+    background: maroon;
     padding: 20px;
     border: 3px solid black;
     border-radius: 10px;
@@ -53,7 +53,7 @@ header {
 .card:hover {
     /*Dit past aan hoe de card eruit ziet als je met je muis erover gaat*/
     transform: scale(1.05);
-    background: #e0e0e0;
+    background: rgb(104, 0, 0);
 }
 
 .card-titel {
@@ -123,12 +123,12 @@ header {
 }
 
 footer {
-    background-color: #666;
+    background-color: maroon;
     border-top: 5px solid black;
     border-bottom: 5px solid black;
     padding: 10px;
     text-align: center;
-    color: white;
+    color: black;
 }
 
 /* Quiz container */
