--- a/Groep Ace Quiz Project/css/geschiedenis.css
+++ b/Groep Ace Quiz Project/css/geschiedenis.css
@@ -7,7 +7,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     height: 100%;
     margin: 0;
-    background-image: url('/Groep\ Ace\ Quiz\ Project/video/autobg.gif');
+    background-image: url('/Groep\ Ace\ Quiz\ Project/video/Wgig.gif');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -16,13 +16,15 @@ body {
 
 header {
     background-color: rgb(170, 80, 255);
-    background-image: linear-gradient(to bottom, rgb(170, 80, 255), rgb(250, 44, 44));
+    background-image: linear-gradient(to bottom, #9a734b, #80777B,  #5e414d);
     border-bottom: 5px solid black;
     padding: 1px;
     text-align: center;
     font-size: 35px;
     color: white;
     margin-bottom: 30px;
+    opacity: 80%;
+    text-shadow: -5px -5px 0 #000, 1px -5px 0 #000, -5px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .cards-container {
@@ -51,14 +53,14 @@ header {
 
 .card {
     display: block;
-    width: 800px;
-    height: 800px;
+    width: 650px;
+    height: 500px;
     background-color: rgb(170, 80, 255);
-    background-image: linear-gradient(to bottom, rgb(170, 80, 255), rgb(250, 44, 44), rgb(247, 247, 39));
-    margin-bottom: 40px;
-    margin-left: 850px;
+    background-image: linear-gradient(to bottom, #9a734b, #5e414d, #80777B);
+    margin-bottom: 200px;
+    margin-left: 450px;
     padding: 20px;
-    border: 3px solid black;
+    border: 5px solid black;
     border-radius: 10px;
     text-decoration: none;
     color: black;
@@ -91,7 +93,7 @@ a {
     margin-top: 50px;
     margin-left: 130px;
     border-radius: 10px;
-    border: 3px solid black;
+    border: 5px solid black;
 }
 
 .author {
@@ -123,7 +125,7 @@ a {
     /* vaste breedte */
     background-color: skyblue;
     color: black;
-    border: solid 4px black;
+    border: solid 2px black;
     border-radius: 6px;
     cursor: pointer;
     font-size: 14px;
@@ -159,7 +161,7 @@ footer {
     /* vaste breedte */
     background-color: skyblue;
     color: black;
-    border: solid 4px black;
+    border: solid 2px black;
     border-radius: 6px;
     cursor: pointer;
     font-size: 14px;
@@ -187,11 +189,12 @@ footer {
     max-width: 600px;
     margin: 50px auto;
     padding: 20px;
-    background: white;
-    border: 3px solid black;
+    background: #9c754F;
+    border: 5px solid black;
     border-radius: 10px;
     text-align: center;
     grid-area: qz;
+    opacity: 80%;
 }
 
 /* Vraagtekst */
@@ -212,13 +215,15 @@ footer {
     font-size: 16px;
     border: 2px solid black;
     border-radius: 6px;
-    background-color: lightblue;
+    background-color: #634550;
+    color: #d4c2cb;
     cursor: pointer;
     transition: background-color 0.2s, transform 0.2s;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 #opties button:hover {
-    background-color: deepskyblue;
+    background-color: #462938;
     transform: scale(1.03);
 }
 
@@ -229,7 +234,7 @@ footer {
     font-size: 18px;
     border: 2px solid black;
     border-radius: 6px;
-    background-color: #007bff;
+    background-color: #797075;
     color: white;
     cursor: pointer;
 }
@@ -247,7 +252,7 @@ footer {
     grid-area: res;
     background: red;
     background-image: linear-gradient(rgb(250, 44, 44), rgb(247, 247, 39));
-    border: 3px solid black;
+    border: 5px solid black;
     border-radius: 10px;
     text-align: center;
 }
@@ -260,7 +265,7 @@ footer {
     grid-area: rv;
     background: red;
     background-image: linear-gradient(rgb(250, 44, 44), rgb(247, 247, 39));
-    border: 3px solid black;
+    border: 5px solid black;
     border-radius: 10px;
     text-align: center;
 }
@@ -271,7 +276,7 @@ footer {
     padding: 20px;
     background: red;
     background-image: linear-gradient(rgb(250, 44, 44), rgb(247, 247, 39));
-    border: 3px solid black;
+    border: 5px solid black;
     border-radius: 10px;
     text-align: center;
 }
@@ -291,4 +296,8 @@ footer {
 #reset-button:hover {
     background-color: deepskyblue;
     transform: scale(1.03);
+}
+
+.resultaatEL-block{
+    display: block;
 }
